# fluidity-app

./: -princemaker  .dockerignore  .gitattributes  .gitignore  .golangci.yml  AUTHORS  Dockerfile  Dockerfile.build  Dockerfile.build-root  Dockerfile.build-root-web  Dockerfile.build-web  Dockerfile.node  Dockerfile.runtime  Dockerfile.runtime-web  Dockerfile.testing  Dockerfile.testing.dockerignore  Dockerfile.web  HACKING.md  LICENSE.md  LICENSE_TRF.md  Makefile  README.md  SECURITY.md  SUMMARY.md  WORKER_ARCHITECTURE.md  build.mk  create-service.sh  docker-compose-envs  docker-compose.sh  docker-compose.yml  go.mod  go.sum  golang.mk  hacking.md  install.sh  node.mk  out  package-lock.json  package.json  run-tests.sh  (+3 more)
.github/: slack.yml
.hooks/: gofmt-pre-commit  pre-commit
.semgrep/: all.yml  golang.yml
automation/: docker-compose-envs  docker-compose-envs-dai  docker-compose-envs-usdc  docker-compose-envs-usdt  docker-compose-ropsten.yml  docker-compose.alerting.yml  docker-compose.aurora-mainnet.yml  docker-compose.aurora-worker.yml  docker-compose.copy-amqp.yml  docker-compose.database-connectors.yml  docker-compose.ethereum-applications-ropsten.yml  docker-compose.ethereum-connectors.yml  docker-compose.ethereum-contracts.yml  docker-compose.ethereum-hardhat.yml  docker-compose.ethereum-kovan.yml  docker-compose.ethereum-mainnet.yml  docker-compose.ethereum-ropsten.yml  docker-compose.ethereum-worker-aurora.yml  docker-compose.ethereum-worker-hardhat.yml  docker-compose.ethereum-worker-kovan.yml  docker-compose.ethereum-worker-mainnet.yml  docker-compose.ethereum-worker-ropsten.yml  docker-compose.ethereum-worker.yml  docker-compose.ethereum.fluidity.money.yml  docker-compose.ethereum.yml  docker-compose.faucet.fluidity.money.yml  docker-compose.faucet.yml  docker-compose.infrastructure.yml  docker-compose.rabbitmq.yml  docker-compose.solana-applications.yml  docker-compose.solana-connectors.yml  docker-compose.solana-ido-connectors.yml  docker-compose.solana-transactions-user-actions.yml  docker-compose.solana-tribeca.yml  docker-compose.solana-worker-mainnet.yml  docker-compose.solana-worker.yml  docker-compose.solana.fluidity.money.yml  docker-compose.solana.yml  docker-compose.twitter-connectors.yml  docker-compose.volumes.yml  (+2 more)
cmd/: Makefile
common/: Makefile
contracts/: Makefile
contracts/solana/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy-validator.sh
contracts/solana/metadata/: fusdc.json
contracts/solana/src/: error.rs  instruction.rs  lib.rs  main.rs  processor.rs
contracts/solana/src/math/: common.rs  decimal.rs  mod.rs  rate.rs
contracts/solana/src/state/: last_update.rs  lending_market.rs  mod.rs  obligation.rs  reserve.rs
contracts/solana/src/utils/: mod.rs  prize_pool.rs  validation.rs
contracts/solana/testing/cargo_audit/: Dockerfile
contracts/solana/testing/cargo_geiger/: Dockerfile
contracts/solana/testing/fuzz/: Cargo.toml  README.md  run.sh
contracts/solana/testing/fuzz/fuzz_targets/: fuzz_log_tvl.rs  fuzz_payout.rs  fuzz_wrap.rs
contracts/solana/testing/fuzz/src/: lib.rs
contracts/solana/testing/miri/: Dockerfile
contracts/solana/testing/solana-contract-test-client/: Cargo.toml  Makefile  README.md  accounts.json  devnet.json  run.sh
contracts/solana/testing/solana-contract-test-client/src/: accounts.rs  instructions.rs  lib.rs  main.rs  rpc.rs  utils.rs
contracts/solana/testing/solana-pocs/: Cargo.toml
contracts/solana/testing/solana-pocs/src/: wrap.rs
contracts/solana/testing/soteria/: soteria.sh
contracts/tribeca-govern-contracts/programs/trf-data-store/: Cargo.toml
contracts/tribeca-govern-contracts/programs/trf-data-store/src/: constants.rs  lib.rs  state.rs
contracts/tribeca-govern-contracts/programs/trf-data-store/src/instructions/: change_delta.rs  change_num_reward_tiers.rs  change_payout_freq.rs  initialize_trf_vars.rs  mod.rs
contracts/utility-gauge/programs/utility-gauge/: Cargo.toml  README.tpl
contracts/utility-gauge/programs/utility-gauge/src/: lib.rs  macros.rs  state.rs
contracts/utility-gauge/programs/utility-gauge/src/instructions/: close_epoch_gauge_vote.rs  create_epoch_gauge.rs  create_gauge.rs  create_gauge_vote.rs  create_gauge_voter.rs  create_gaugemeister.rs  gauge_commit_vote.rs  gauge_disable.rs  gauge_enable.rs  gauge_revert_vote.rs  gauge_set_vote.rs  mod.rs  prepare_epoch_gauge_voter.rs  reset_epoch_gauge_voter.rs  set_gaugemeister_params.rs  sync_disabled_gauge.rs  sync_gauge.rs  trigger_next_epoch.rs
database/: .gitignore  Dockerfile.postgres  Dockerfile.timescale  Makefile  README.md  build.sh  create-migration.sh  create_migration_dir.sh  (+3 more)
(+4076 files in other folders)
