[package]
name = "solana-fluidity"
version = "0.1.0"
authors = [ "Fluidity Money" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
exclude_entrypoint = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.10.3"
solana-program = "1.17.12"
spl-token = { version = "3.3.0", features=["no-entrypoint"] }
uint = "0.9"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
mpl-token-metadata = "3.2.3"

[dev-dependencies]
proptest = "1.0.0"
solana-program-test = "1.17.12"
solana-sdk = "1.17.12"

[lib]
name = "fluidity"
crate-type = ["cdylib", "lib"]
