[package]
name = "fluidity-testing-cli"
version = "0.1.0"
authors = ["Ying Stokes <ying@spi.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
base64 = "0.13.0"
solana-sdk = "=1.7.4"
solana-client = "=1.7.4"
solana-transaction-status = "=1.7.4"
solana-account-decoder = "=1.7.4"
websocket = "0.26.2"
spl-token = {version = "3.1.1", features=["no-entrypoint"]}
spl-associated-token-account = "1.0.2"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
envy = "0.4"
