[package]
name = "solana-fluidity-pocs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[dependencies]
solana-program = "1.10.27"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
borsh = "0.9.1"
borsh-derive = "0.9.1"

poc-framework-osec = "0.1.1"
owo-colors = "3.1.0"

[dependencies.solana-fluidity]
path = "../.."

[lib]
